<resources>
    <!-- The next line is for FirebaseUI customization of the app bar title. -->
    <string name="app_name">Sign in</string>
    <string name="app_name_real">Better Barter System</string>
    <string name="facebook_application_id" translatable="false">451093265386701</string>
    <string name="signin_cancelled">Sign-in cancelled. Please try again.</string>
    <string name="no_internet">No internet connection. Please try again.</string>
    <string name="unknown_error">Unknown error. Please try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="homelabel_nav">Home</string>
    <string name="searchlabel_nav">Search</string>
    <string name="createlistinglabel_nav">Create Listing</string>
    <string name="managelistings_nav">Manage Listings</string>
    <string name="accountlabel_nav">Account</string>
    <string name="myaccount_nav">My Account</string>
    <string name="signout_nav">Sign Out</string>
    <string name="createlist_text">Create Lists</string>
    <string name="createlist_title">Create Lists</string>
    <string name="namehint">Titles (separated by commas)</string>
    <string name="authorhint">Authors (separated by commas)</string>
    <string name="add_bookshint">Add Books</string>
    <string name="separation_hint">You can enter multiple books by separating their titles, authors, and ISBNs by commas and a space.</string>
    <string name="error_string">Errors. Please try again.</string>
    <string name="view_all_books">View All Books</string>
    <string name="managelists_text">Manage Lists</string>
    <string name="hometitle">Home</string>
    <string name="signedout_text">Signed out.</string>
    <string name="mybooks_title">My Books</string>
    <string name="add_books_label">Add books...</string>
    <string name="view_my_books">View My Books</string>
    <string name="sign_out_label">Sign out...</string>
    <string name="deletetext">Delete</string>
    <string name="no_books">You have no books added.</string>
    <string name="no_books_available">There are no books available.</string>
    <string name="view_details">View Details</string>
    <string name="allbooks_label">All Books</string>
    <string name="contact_label">Contact Seller</string>
    <string name="showsellers_label">Show Sellers for My Wanted Books</string>
    <string name="notifsettings_text">Notification Settings</string>
    <string name="q1_notif">How often do you want notifications?</string>
    <string name="q2_notif">What type of trade do you want to search for?</string>
    <string name="perHour_text">1 per hour</string>
    <string name="perDay_text">1 per day</string>
    <string name="complex_text">Complex (where you have to trade with at least 1 person, but not more than 3 people)</string>
    <string name="simple_text">Simple (where you only have to trade with one person)</string>
    <string name="save_text">Save</string>
    <string name="startsearch_text">Start Trade Search</string>
    <string name="traderuning_text">Trade service is running. Wait for a notification.</string>
    <string name="nothing_available">There are no trades available, and no one is selling any of the books you want.</string>
    <string name="tradespossible_label">Here are the trades possible:</string>
    <string name="empty_title">Empty author/title/ISBN textbox. Please enter a value.</string>
    <string name="titles_authors_unequal">The number of titles, authors, and ISBNs are not equal. Please try again.</string>
    <string name="isbnhint">ISBNs (separated by commas; must be accurate)</string>
    <string name="isbn_hint">Please enter the 13 digit ISBN only, without dashes and spaces.</string>
    <string name="isbn_warning">At least one ISBN has non-digit characters. Please try again.</string>
    <string name="addbook_label">Add Books</string>
    <string name="userguide_label">User Guide</string>
    <string name="mainfunctionality_label">Main Functionality:</string>
    <string name="main_functionality">This app will help you trade/barter for the books that you want with the books that you have. For example, let\'s say that User 1 has Book A and wants Book B, and User 2 has Book B and wants Book A. This app will connect the two users, and allow them to trade or purchase the books if they want to.</string>
    <string name="stepstouse_label">Steps to Use:</string>
    <string name="stepstouse_step1">1. Create a list of books for buying and selling by clicking on the \"Create Lists\" button. Be very careful in entering the ISBN correctly, as the app will find trades for your books based on the ISBN. If you enter the ISBN incorrectly, the app may not work as expected. If you are entering multiple books, don\'t forget to put a comma and a space in between each title, author, and ISBN, so the app knows there are multiple books.</string>
    <string name="stepstouse_step2">2. Return to the main screen. You will see multiple buttons: \"View My Books\", which will allow you to view your books, delete them, and add more books; \"View All Books\", which will show you all the books that everyone (except you) is selling, and their details; \"Notification Settings\", which we will get into later; and \"Show My Sellers for My Wanted Books\", which will allow you view the sellers (if any) for your wanted books, and their details.</string>
    <string name="detailinfo_label">Detail Screens Information:</string>
    <string name="detailinfo">Both of the \"View All Books\" and \"Show My Sellers for My Wanted Books\" have detail screens for each book. Clicking on the \"View Details\" button will show you the book details, the seller\"s name, the ISBN, and the books that the seller wants. There is also a \"Contact Seller\" button, which will open an email and prefill it with a subject line, the \"To:\" email field, and a body text template for requesting a book. You are free to change this template to suit your needs before sending the email.</string>
    <string name="notifinfo_label">Notification Information:</string>
    <string name="notifinfo">Clicking on the \"Notification Settings\" button will bring up a screen that will allow you to set a frequency for the app to send a notification saying if there are any trades possible, and the app will also allow you to set the type of trade for the app to search for. A simple trade is a direct trade with one person, while a complex trade may involve trading with a maximum of 3 people. Once you select these settings, click \"Save\". You will see a button called \"Start Trade Search\", and when it is clicked, the app will start checking for trades at the frequency selected. When a notification is displayed, you can click on it to go to a special screen that will show you the trades possible. There will also be contact buttons for contacting each seller required for the trade to happen. As explained in the previous section, when you click on a contact button, the email will automatically prefill with the information required, but you are free to change what you want before sending the email.</string>
    <string name="stepstouse_step1condensed">1) Click on \"Create Lists\" on the home screen to create lists of books to sell and books to buy on the two different pages. Accurate 13 digit ISBNs are critical for correct matches to happen.</string>
    <string name="stepstouse_step2condensed">2) Click on \"Notification Settings\" on the home screen to setup the notification schedule: once an hour or once a day.</string>
    <string name="stepstouse_step3condensed">3) Select the type of trade: complex trades are trades where the app could recommend you to do a 3 way trade/exchange, and simple trades are trades where the app would wait to find an exchange with only one other user.</string>
    <string name="stepstouse_step4condensed">4) Click \"Start Trade Search\" to make the app start looking for possible trades. Wait until it finds a match and sends you a notification (once an hour or once a day as selected in Step 2).</string>
    <string name="stepstouse_step5condensed">5) Clicking on \"View All Books\" shows all the books available for exchange/barter/selling.</string>
    <string name="stepstouse_step6condensed">6) Clicking \"Show Sellers for My Wanted Books\" shows the users who have listed the books that are on your buy list.</string>
    <string name="stepstouse_step7condensed">7) Once the notification appears, click on it, and the app will recommend how to proceed. It will generate emails with details to contact the other sellers, allowing you to proceed with the exchange.</string>
    <string name="moredetails_label">Click on \"More Details\" below for detailed instructions.</string>
    <string name="mainfunctionality_condensed">Instead of buying and selling books, you can trade/exchange books with others that have what you need and that need what you have. This trade can be directly with one person or you can do a 2-way or 3-way trade. Click on \"More Details\" if you need examples.</string>
    <string name="moredetails">More Details</string>
    <string name="donation_text">This app was created by a high schooler. Please feel free to donate via PayPal or Venmo to gauboyinc@gmail.com. :)</string>
    <string name="isbnlength_warning">At least one ISBN isn\'t exactly 13 digits long. Please try again.</string>
</resources>
