<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bookISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/isbnhint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/namehint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/authorhint" />

    <Button
        android:id="@+id/addBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bookshint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:text="@string/isbn_hint"
        android:textStyle="bold"
        android:textColor="#ff0000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/separation_hint"/>

</LinearLayout>